tests/outref/TSC04.ref
OCTO> SELECT invalid FROM names;
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: INVALID
Error with syntax near (line 1, column 7):

SELECT invalid FROM names;
       ^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT invalid FROM names;

OCTO> 
